spiffs to auto-recognition of items
In particular, quantities still get parsed, even if there's no
ingredient name. A numberless unit is assumed to have a 1. A quantity
after an ingredient is now recognized.